--- a/style.css
+++ b/style.css
@@ -222,3 +222,37 @@ padding-left: 135px;
 	margin-left: 70px;
 	margin-bottom: 100px;
 }
+
+.popup {
+	display: flex;
+	position: absolute;
+	width: 746px;
+	height: 518px;
+	top: 281px;
+	margin-left: 76px;
+	background-color: #F6F6F5;
+	z-index: 6;
+}
+
+.close-button-wrapper {
+	height: 20px;
+	width: 20px;
+	margin-left: 706px;
+	margin-top: 20px;
+}
+
+.close-button:hover {
+	filter: brightness(1.0);
+	cursor: pointer;
+}
+
+.popup-brightness {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 150%;
+	background-color: #111;
+	opacity: 0.5;
+	z-index: 5;
+}
