--- a/style.css
+++ b/style.css
@@ -185,8 +185,7 @@ padding-left: 135px;
 	line-height: 45px;
 	color: #161616;
 	display: block;
-	margin-top: 90px;
-	margin-right: 65px;
+
 }
 
 .fivesteps-images {
@@ -380,7 +379,16 @@ padding-left: 135px;
 	display: none;
 }
 
+.line-wrapper {
+display: flex;
+justify-content: center;
+}
 
+.line {
+	padding-right: 330px;
+	margin-top: 90px;
+	margin-right: 65px;
+}
 
 @media screen and (min-width: 1024px) and (max-width:1300px) {
 
@@ -503,7 +511,7 @@ padding: 0;
 	margin-left: 90px;
 	margin-top: 16px;
 	padding: 0;
-	content: Каждый день мы создаем новую композицию <br> из свежих, сезонных цветов;
+	
 }
 
 .main-section-button {
@@ -528,6 +536,27 @@ padding: 0;
 
 .main-links {
 	display: none;
+}
+
+.subtitle {
+	font-weight: 400;
+	font-size: 32px;
+	line-height: 36px;
+	margin-left: 60px;
+}
+
+.line {
+	padding-right: 177px;
+	margin-top: 90px;
+	margin-right: 65px;
+}
+
+.fivesteps-underline {
+display: none;
+}
+
+.fivesteps-line {
+display: none;
 }
 
 }
